# zxc-python

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/zxc/: __init__.py  __init__.pyi  _zxc.c  _zxc.pyi
src/zxc_c/: .clang-format  .gitignore  LICENSE
src/zxc_c/.clusterfuzzlite/: Dockerfile  build.sh
src/zxc_c/.github/: FUNDING.yml
src/zxc_c/.github/codeql/: codeql-config.yml
src/zxc_c/.github/workflows/: build.yml  build_all.yml  fuzzing.yml  quality.yml  vendors.yml
src/zxc_c/src/cli/: main.c
src/zxc_c/src/lib/: zxc_compress.c  zxc_internal.h
