[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "zxc"
version = "0.0.1"
description = "ZXC: Package for high-performance, lossless, asymmetric compressions"
# authors = [{name = ""}]
# maintainers = [
#     {name = "", email=""},
# ]
requires-python = ">=3.9"
readme = "README.md"

[project.urls]
Homepage = "https://https://github.com/hellobertrand/zxc"

[tool.scikit-build]
wheel.packages = ["src/zxc"]
build.verbose = true
logging.level = "DEBUG"